font overlapping issue fixed

--- a/assets/css/new_style.css
+++ b/assets/css/new_style.css
@@ -678,6 +678,8 @@ html, body {
     border: 1px solid #979797;
     border-radius: 4px;
     width: 100%;
+    font-size: 10px;
+    overflow: hidden;
 }
 .fan_mode_section,.ser_mode_section,.ser_point_section{
     height: 25%;
@@ -712,6 +714,6 @@ html, body {
 }
 .caret{
     position: absolute;
-    top: 15px;
-    right: 8px;
+    top: 12px;
+    right: 3px;
 }
